# Bilevel-Optimization-Website

./: .gitignore  README.md  app.py  compose.yaml  deploy.sh  pyproject.toml  requirements.txt  run_backend.sh  submissions.db  template_submission.json
artifacts/: docker-architecture.md  vm-setup.md
backend/: Dockerfile  celery_worker.py  config_validator.py  main.py  requirements.txt
backend/data/: submissions.db
frontend/: Dockerfile  app.py  requirements.txt
nginx/: entrypoint.sh  nginx-initial.conf  nginx.conf
results/csv/: Full_Benchmark_V1.0_20251218-100251.csv  Full_Benchmark_V1.0_20260215-151116.csv  Full_Benchmark_V1.0_20260217-153416.csv  Full_Benchmark_V1.0_20260217-153644.csv  Full_Benchmark_V1.0_20260217-153858.csv  Full_Benchmark_V1.0_20260217-154159.csv  Full_Benchmark_V1.0_20260217-154504.csv  Full_Benchmark_V1.0_20260217-154831.csv  Full_Benchmark_V1.0_20260217-155712.csv  Full_Benchmark_V1.0_20260217-155945.csv  Full_Benchmark_V1.0_20260217-161020.csv  Full_Benchmark_V1.0_20260217-161332.csv  Full_Benchmark_V1.0_20260224-160031.csv  Full_Benchmark_V1.0_20260303-160725.csv  Full_Benchmark_V1.0_20260303-161112.csv  Full_Benchmark_V1.0_20260303-161920.csv  SACE-Test-Local_20251218-095932.csv  SACE-Test-Local_20251218-100113.csv  ZerothOrder_SACE_vs_VRZSBO_Comp_20260217-155318.csv
results/history/: history_HyperRepresentation_NestedDE_20260217-155318.csv  history_SMD10_BiGA_20251218-104338.csv  history_SMD10_BiGA_20251218-104339.csv  history_SMD10_GBSA_20251218-104341.csv  history_SMD10_NestedDE_20251218-104252.csv  (+182 more)
