[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilevel-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.38.0",
    "pydantic[email]>=2.0",
    "bcrypt>=4.2.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
]

[tool.setuptools]
# No Python package to install; app is run from project root (backend.main:app).
# This avoids "Multiple top-level packages discovered" for nginx, frontend, results, SACEProject.
packages = []
